tests/compile-fail/if-precidence.sk
fn bar() {
	let z = 1 + if true { 2 } else { 3 }
}
